--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,7 @@ services:
     container_name: nginxrp
     image: nginxrp
     volumes:
-      - ./nginx/core.conf:/etc/nginx/conf.d/core.conf
-      - ./nginx/proxy.conf:/etc/nginx/conf.d/proxy.conf
-      - ./nginx/html:/var/www/html
+      - ./nginx/proxy.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
       - "443:443"
