--- a/nginx/proxy.conf
+++ b/nginx/proxy.conf
@@ -1,26 +1,47 @@
-proxy_set_header   Host $host;
-proxy_set_header   X-Real-IP $remote_addr;
-proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-proxy_set_header   X-Forwarded-Host $server_name;
-
 server {
-    listen 5555;
+    # Les configurations du serveur vont ici
+    listen 80;
     server_name localhost;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_buffering off;
+    proxy_request_buffering off;
+    proxy_http_version 1.1;
+    proxy_intercept_errors on;
+
+
     location / {
-        proxy_pass         http://django-app:5555/;
-    }
-}
+        # Configurations pour votre application Django
+        proxy_pass http://django-app:5555/;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
 
-server {
-    listen 5000;
-    server_name localhost;
-    
-    location ^~ /static/  {
-        include  /etc/nginx/mime.types;
-        root /app/;
     }
 
-    location /pictionnary {
-        proxy_pass         http://flask-app:5000/;
+    location /pictionnary/ {
+        # Configurations pour votre application Flask
+        proxy_pass http://flask-app:5000/;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+
+    }
+
+    location /socket.io/ {
+        proxy_pass http://flask-app:5000/socket.io/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    location /static/pico/ {
+        alias http://flask-app:5000/pictionnary/static/pico/;
     }
 }
