fix static files

--- a/nginx/proxy.conf
+++ b/nginx/proxy.conf
@@ -42,6 +42,6 @@ server {
     }
 
     location /static/pico/ {
-        alias http://flask-app:5000/pictionnary/static/pico/;
+        proxy_pass http://flask-app:5000/static/pico/;
     }
 }
